--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 			<canvas width="400" height="400"></canvas>	
 		</div>
 	</div>
+	<a href="https://github.com/PotatoParser/sortsimulator">Source Code ~ Github Repository</a>
 	<script type="text/javascript" src="environment.js"></script>
 </body>
 </html>
