--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sorting Algorithms</title>
+	<title>Sort Simulator</title>
 	<link rel="shortcut icon" href="">
 	<link rel="stylesheet" type="text/css" href="styles.css">	
 </head>
 <body>
 	<div class="flex">
 		<div class="container">
+			<h2>Sort Simulator</h2>
 			<h1>Select A Sorting Algorithm</h1>
 			<div>
 				<button class="disableable" onclick="_sort(selectionSort);">Selection Sort</button>
@@ -17,7 +18,7 @@
 			</div>
 			<div>
 				<button id="play" onclick="toggle();" disabled>PAUSE &#124;&#124;</button>		
-				<button id="stop">Cancel Sorting Algorithm</button>
+				<button id="stop">Clear Sorting Algorithm</button>
 			</div>
 			<h1>Adjust Values</h1>
 			<table>
@@ -64,7 +65,7 @@
 			<canvas width="400" height="400"></canvas>	
 		</div>
 	</div>
-	<a href="https://github.com/PotatoParser/sortsimulator">Source Code ~ Github Repository</a>
+	<a href="https://github.com/PotatoParser/sortsimulator">v1.0</a>
 	<script type="text/javascript" src="environment.js"></script>
 </body>
 </html>
