--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 			<canvas width="400" height="400"></canvas>	
 		</div>
 	</div>
-	<a href="https://github.com/PotatoParser/sortsimulator">v1.0</a>
+	<div class="repo">
+		<a href="https://github.com/PotatoParser/sortsimulator/releases">Source Code &copy; Wilson Nguyen</a>
+	</div>
 	<script type="text/javascript" src="environment.js"></script>
 </body>
 </html>
