Added bubble sort

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			<div>
 				<button class="disableable" onclick="_sort(selectionSort);">Selection Sort</button>
 				<button class="disableable" onclick="_sort(insertionSort)">Insertion Sort</button>
-				<button class="disableable" onclick="_sort(mergeSort)">Merge Sort</button>	
+				<button class="disableable" onclick="_sort(mergeSort)">Merge Sort</button>
+				<button class="disableable" onclick="_sort(bubbleSort)">Bubble Sort</button>						
 				<button class="disableable" onclick="_sort(bogoSort)">Bogo Sort</button>				
 			</div>
 			<div>
