--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 	<div class="repo">
 		<a href="https://github.com/PotatoParser/sortsimulator/releases">Source Code &copy; Wilson Nguyen</a>
 	</div>
+	<noscript>JavaScript is not supported on this browser!</noscript>
 	<script type="text/javascript" src="environment.js"></script>
 </body>
 </html>
