--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
 	<div class="repo">
 		<a href="https://github.com/PotatoParser/sortsimulator/releases">Source Code &copy; Wilson Nguyen</a>
 	</div>
+	<script type="text/javascript"> var _v = 1.0; </script>
+	<script language="Javascript1.1"> _v = 1.1; </script>
+	<script language="Javascript1.2"> _v = 1.2; </script>
+	<script language="Javascript1.3"> _v = 1.3; </script>
+	<script language="Javascript1.4"> _v = 1.4; </script>
+	<script language="Javascript1.5"> _v = 1.5; </script>
+	<script language="Javascript1.6"> _v = 1.6; </script>
+	<script language="Javascript1.7"> _v = 1.7; </script>
+	<script language="Javascript1.8"> _v = 1.8; </script>
+	<script language="Javascript1.9"> _v = 1.9; </script>
 	<noscript>JavaScript is not supported on this browser!</noscript>
 	<script type="text/javascript" src="environment.js"></script>
 </body>
